log
Wed, Mar 19, 2025  9:03:38 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:11:14 AM: 
 exercises.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:15: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int elem = first(L);
               ^~~~~
exercises.c:66:16: error: comparison between pointer and integer [-Werror]
    while (elem != NULL)
                ^~
exercises.c:69:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       elem = next(L);
            ^
exercises.c: In function 'eliminaElementos':
exercises.c:85:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int num = first(L);
              ^~~~~
exercises.c:86:15: error: comparison between pointer and integer [-Werror]
    while (num != NULL)
               ^~
exercises.c:89:16: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       else num = next(L);
                ^
exercises.c: In function 'copia_pila':
exercises.c:103:11: error: unused variable 'P_aux' [-Werror=unused-variable]
    Stack* P_aux = create_stack();
           ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d8a8bab
